Controller and frontend fixes